Comment out event

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -13,12 +13,12 @@
 
             gtag('config', 'G-LZRG6ZN7KF');
 
-            gtag('event', 'click', {
-                'event_category': 'outbound',
-                'event_label': 'whatsapp',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } //
-            });
+            // gtag('event', 'click', {
+            //     'event_category': 'outbound',
+            //     'event_label': 'whatsapp',
+            //     'transport_type': 'beacon',
+            //     'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } //
+            // });
         </script>
     </head>
 
