--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <meta http-equiv="refresh" content="0; URL='https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw'" />
+        <meta http-equiv="refresh" content="10; URL='https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw'" />
 
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
@@ -17,7 +17,7 @@
             //     'event_category': 'outbound',
             //     'event_label': 'whatsapp',
             //     'transport_type': 'beacon',
-            //     'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } //
+            //     'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } 
             // });
         </script>
     </head>
