Add whatsapp event send

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <meta http-equiv="refresh" content="10; URL='https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw'" />
+        <meta http-equiv="refresh" content="0; URL='https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw'" />
 
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
@@ -13,12 +13,12 @@
 
             gtag('config', 'G-LZRG6ZN7KF');
 
-            // gtag('event', 'click', {
-            //     'event_category': 'outbound',
-            //     'event_label': 'whatsapp',
-            //     'transport_type': 'beacon',
-            //     'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } 
-            // });
+            gtag('event', 'click', {
+                'event_category': 'outbound',
+                'event_label': 'whatsapp',
+                'transport_type': 'beacon',
+                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; } 
+            });
         </script>
     </head>
 
