Add lineup and remove double redirect

--- a/lineapp/index.html
+++ b/lineapp/index.html
@@ -13,9 +13,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'whatsapp',
+                'event_label': 'lineapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw"; }
+                'event_callback': function () { document.location = "https://broadwaywithatwist.lineapp.co.il"; }
             });
         </script>
     </head>
