Change utm medium on instagram bio

--- a/get-tickets/index.html
+++ b/get-tickets/index.html
@@ -16,7 +16,7 @@
                 'event_category': 'outbound',
                 'event_label': 'instagram',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_source=instagram&utm_medium=app&utm_campaign=general-posting&utm_content=instagram-profile"; }
+                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_source=instagram&utm_medium=inst-profile&utm_campaign=general-posting&utm_content=instagram-profile"; }
             });
         </script>
     </head>
