Ignore double redirects, change UTMs a bit (following utm.io organizing), change instagram bio to redirect to whatsapp group and add tickts link to whatsapp group description

--- a/join-whatsapp/index.html
+++ b/join-whatsapp/index.html
@@ -14,10 +14,11 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'instagram',
+                'event_label': 'whatsapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/whatsapp?utm_source=whatsapp&utm_medium=whatsapp-group&utm_campaign=general-posting&utm_content=whatsapp-group-description"; }
+                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
             });
+
         </script>
     </head>
 
