--- a/updates/index.html
+++ b/updates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <!-- This is a redirect specifically from the whatsapp group description to lineapp, in order to keep whatsapp description looking clean -->
+    <!-- This is a redirect specifically from instagram bio to whatsapp, in order to keep instagram looking clean -->
 
     <head>
         <!-- Google tag (gtag.js) -->
@@ -14,9 +14,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'lineapp',
+                'event_label': 'whatsapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://broadwaywithatwist.lineapp.co.il?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
+                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram"; }
             });
         </script>
     </head>
