Revert to double redirect - need it for UTM tracking - but have separate intermediate event labels

--- a/join-whatsapp/index.html
+++ b/join-whatsapp/index.html
@@ -14,9 +14,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'whatsapp',
+                'event_label': 'whatsapp-group-description-to-whatsapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
+                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/whatsapp?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
             });
 
         </script>
