--- a/updates/index.html
+++ b/updates/index.html
@@ -14,9 +14,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'whatsapp',
+                'event_label': 'insta-bio-to-whatsapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram"; }
+                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/whatsapp?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram"; }
             });
         </script>
     </head>
