--- a/get-tickets/index.html
+++ b/get-tickets/index.html
@@ -14,9 +14,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'lineapp',
+                'event_label': 'whatsapp-group-description-to-lineapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://broadwaywithatwist.lineapp.co.il?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
+                'event_callback': function () { document.location = "hhttps://links.broadwaywithatwist.xyz/tickets?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
             });
         </script>
     </head>
