--- a/get-tickets/index.html
+++ b/get-tickets/index.html
@@ -16,7 +16,7 @@
                 'event_category': 'outbound',
                 'event_label': 'whatsapp-group-description-to-lineapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "hhttps://links.broadwaywithatwist.xyz/tickets?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
+                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
             });
         </script>
     </head>
