Fix problem with book-now

--- a/book-now/index.html
+++ b/book-now/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <!-- This is a redirect specifically from the whatsapp group description to lineapp, in order to keep whatsapp description looking clean -->
+    <!-- This is a redirect specifically from instagram bio to lineapp, in order to keep instagram looking clean -->
 
     <head>
         <!-- Google tag (gtag.js) -->
@@ -14,9 +14,9 @@
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
-                'event_label': 'whatsapp-group-description-to-lineapp',
+                'event_label': 'insta-bio-to-lineapp',
                 'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=whatsapp-description&utm_medium=whatsapp&utm_source=whatsapp-description"; }
+                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram"; }
             });
         </script>
     </head>
