Disable redirect for debug purposes

--- a/whatsapp-pixel-event/index.html
+++ b/whatsapp-pixel-event/index.html
@@ -52,7 +52,7 @@
             'transport_type': 'beacon',
             'event_callback': function () {
                 fbq('trackCustom', 'JoinWhatsApp'); // Fire the Facebook Pixel event
-                document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw";
+                // document.location = "https://chat.whatsapp.com/La9NtdsfoXC0xKnCVjTdIw";
             }
         });
     </script>
