Use bwt-lineapp GA property for lineapp redirect

--- a/tickets/index.html
+++ b/tickets/index.html
@@ -3,13 +3,13 @@
 
     <head>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0Y73LPQJV"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
             gtag('js', new Date());
 
-            gtag('config', 'G-LZRG6ZN7KF');
+            gtag('config', 'G-M0Y73LPQJV');
 
             gtag('event', 'redirect', {
                 'event_category': 'outbound',
