Add additional call

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -24,6 +24,7 @@
                         document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
                     }
                 });
+                document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
             } catch (e) {
                document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
             }
