Fix blocker issue on all redirects

--- a/facebook/index.html
+++ b/facebook/index.html
@@ -5,18 +5,23 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try{
+                window.dataLayer = window.dataLayer || [];
+                function gtag() { dataLayer.push(arguments); }
+                gtag('js', new Date());
 
-            gtag('config', 'G-LZRG6ZN7KF');
+                gtag('config', 'G-LZRG6ZN7KF');
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'facebook-group',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://www.facebook.com/groups/763859465058650"; }
-            });
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'facebook-group',
+                    'transport_type': 'beacon',
+                    'event_callback': function () { document.location = "https://www.facebook.com/groups/763859465058650"; }
+                });
+                document.location = "https://www.facebook.com/groups/763859465058650";
+            } catch (e){
+                document.location = "https://www.facebook.com/groups/763859465058650";
+            }
         </script>
     </head>
 
