--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -21,6 +21,7 @@
                     'event_label': 'whatsapp',
                     'transport_type': 'beacon',
                     'event_callback': function () {
+                        // WHEN YOU CHANGE THIS - CHANGE whatsapp-pixel-event AS WELL!!
                         document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
                     }
                 });
