--- a/book-now/index.html
+++ b/book-now/index.html
@@ -6,18 +6,30 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try {
+                window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-LZRG6ZN7KF');
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'insta-bio-to-lineapp',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram"; }
-            });
+                gtag('js', new Date());
+
+                gtag('config', 'G-LZRG6ZN7KF');
+
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'insta-bio-to-lineapp',
+                    'transport_type': 'beacon',
+                    'event_callback': function () {
+                        document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram";
+                    }
+                });
+                document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram";
+
+            } catch (e){
+                document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=insta_bio&utm_medium=social&utm_source=instagram";
+            }
         </script>
     </head>
 
