--- a/community/index.html
+++ b/community/index.html
@@ -6,18 +6,30 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try {
+                window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-LZRG6ZN7KF');
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'instagram-to-whatsapp-community',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/whatsapp-community?utm_campaign=general-posting&utm_medium=social&utm_source=instagram&utm_content=instagram-pinned-post"; }
-            });
+                gtag('js', new Date());
+
+                gtag('config', 'G-LZRG6ZN7KF');
+
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'instagram-to-whatsapp-community',
+                    'transport_type': 'beacon',
+                    'event_callback': function () {
+                        document.location = "https://links.broadwaywithatwist.xyz/whatsapp-community?utm_campaign=general-posting&utm_medium=social&utm_source=instagram&utm_content=instagram-pinned-post";
+                    }
+                });
+                document.location = "https://links.broadwaywithatwist.xyz/whatsapp-community?utm_campaign=general-posting&utm_medium=social&utm_source=instagram&utm_content=instagram-pinned-post";
+
+            } catch (e){
+                document.location = "https://links.broadwaywithatwist.xyz/whatsapp-community?utm_campaign=general-posting&utm_medium=social&utm_source=instagram&utm_content=instagram-pinned-post";
+            }
 
         </script>
     </head>
