--- a/tickets/index.html
+++ b/tickets/index.html
@@ -5,18 +5,29 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0Y73LPQJV"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try {
+                window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-M0Y73LPQJV');
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'lineapp',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://broadwaywithatwist.lineapp.co.il"; }
-            });
+                gtag('js', new Date());
+
+                gtag('config', 'G-M0Y73LPQJV');
+
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'lineapp',
+                    'transport_type': 'beacon',
+                    'event_callback': function () {
+                        document.location = "https://broadwaywithatwist.lineapp.co.il";
+                    }
+                });
+                document.location = "https://broadwaywithatwist.lineapp.co.il";
+            } catch (e) {
+                document.location = "https://broadwaywithatwist.lineapp.co.il";
+            }
         </script>
     </head>
 
