--- a/tks/index.html
+++ b/tks/index.html
@@ -6,18 +6,29 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try {
+                window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-LZRG6ZN7KF');
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'tiktok-to-lineapp',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=tiktok_post&utm_medium=social&utm_source=tiktok"; }
-            });
+                gtag('js', new Date());
+
+                gtag('config', 'G-LZRG6ZN7KF');
+
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'tiktok-to-lineapp',
+                    'transport_type': 'beacon',
+                    'event_callback': function () {
+                        document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=tiktok_post&utm_medium=social&utm_source=tiktok";
+                    }
+                });
+                document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=tiktok_post&utm_medium=social&utm_source=tiktok";
+            } catch (e) {
+                document.location = "https://links.broadwaywithatwist.xyz/tickets?utm_campaign=tiktok_post&utm_medium=social&utm_source=tiktok";
+            }
         </script>
     </head>
 
