--- a/whatsapp-community/index.html
+++ b/whatsapp-community/index.html
@@ -5,18 +5,29 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
+            try {
+                window.dataLayer = window.dataLayer || [];
 
-            gtag('config', 'G-LZRG6ZN7KF');
+                function gtag() {
+                    dataLayer.push(arguments);
+                }
 
-            gtag('event', 'redirect', {
-                'event_category': 'outbound',
-                'event_label': 'whatsapp',
-                'transport_type': 'beacon',
-                'event_callback': function () { document.location = "https://chat.whatsapp.com/FMQhixtbV344s3ahZe9Ngp"; }
-            });
+                gtag('js', new Date());
+
+                gtag('config', 'G-LZRG6ZN7KF');
+
+                gtag('event', 'redirect', {
+                    'event_category': 'outbound',
+                    'event_label': 'whatsapp',
+                    'transport_type': 'beacon',
+                    'event_callback': function () {
+                        document.location = "https://chat.whatsapp.com/FMQhixtbV344s3ahZe9Ngp";
+                    }
+                });
+                document.location = "https://chat.whatsapp.com/FMQhixtbV344s3ahZe9Ngp";
+            } catch (e){
+                document.location = "https://chat.whatsapp.com/FMQhixtbV344s3ahZe9Ngp";
+            }
         </script>
     </head>
 
