--- a/whatsapp-pixel-event/index.html
+++ b/whatsapp-pixel-event/index.html
@@ -36,25 +36,30 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LZRG6ZN7KF"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
+        try {
+            window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'G-LZRG6ZN7KF');
-
-        gtag('event', 'redirect', {
-            'event_category': 'outbound',
-            'event_label': 'whatsapp',
-            'transport_type': 'beacon',
-            'event_callback': function () {
-                fbq('trackCustom', 'JoinWhatsApp'); // Fire the Facebook Pixel event
-                document.location = "https://chat.whatsapp.com/GTgYaObZm4MCq4jvk8TzRM";
+            function gtag() {
+                dataLayer.push(arguments);
             }
-        });
+
+            gtag('js', new Date());
+
+            gtag('config', 'G-LZRG6ZN7KF');
+
+            gtag('event', 'redirect', {
+                'event_category': 'outbound',
+                'event_label': 'whatsapp',
+                'transport_type': 'beacon',
+                'event_callback': function () {
+                    fbq('trackCustom', 'JoinWhatsApp'); // Fire the Facebook Pixel event
+                    document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
+                }
+            });
+            document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
+        } catch (e){
+            document.location = "https://chat.whatsapp.com/Ltlc0kB2n6II4A6wXDeNas";
+        }
     </script>
 </head>
 
