Use same whatsapp event as in tickchak

--- a/whatsapp/index.html
+++ b/whatsapp/index.html
@@ -26,10 +26,8 @@
       'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '6744140815608666');
     fbq('track', 'PageView');
-    fbq('trackCustom', 'WhatsappLinkClick', {
-      source: 'primary-text-ad-link',
-      campaign: 'april-effort'
-    });
+    fbq('trackCustom','WhatsappLinkClick');
+
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
